Added Basketball Calculator , Not Implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="app">Final Amount :</string>
     <string name="accumulator">Bet Amount (100,000) = 1,000 :</string>
     <string name="two_thousand">1200</string>
+    <string name="basket">BasketBall Calculator</string>
 </resources>
